--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         yesButton.style.fontSize = `${fontSize}px`; 
         valentineQuestion.textContent = ["Hii my babi, my baby, my mahal, my pokieee, Will you be my Valentine?", "Sigi naa ehheehe", "Pleaseee :<<", "DALII DALII EHEEHE", "Datee tayoooo", "SURE NAA? :<<", "SURE NAA? :<<","BLEEHH BAWAL NA TUMANGGII HIHIHIH"][noClickCount];
         if (noClickCount < 7) {
-          noButton.textContent = ["No", "Ayaw", "Balakajan", "BLEH AYAW", "Date ka magisa mo", "AYAW PADIN",  "BAWAL MACLICK BLE"][noClickCount];
+          noButton.textContent = ["No", "Ayaw", "Balakajan", "BLEH AYAW", "Date ka magisa mo", "AYAW PADIN", "NO NO", "BAWAL MACLICK BLE"][noClickCount];
         }
       }
     });
