--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="flex items-center justify-center h-screen">
     <div class="flex flex-col items-center p-4">
       <img id="imageDisplay" src="./images/image1.gif" alt="Cute kitten with flowers" class="rounded-md h-[300px]" style="object-fit: cover;" />
-      <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">Hii my babi, my baby, my mahal, my pokieee, Will you be my Valentine?</h2>
+      <h2 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">Hii my lovee, my babi, my baby, my mahal, my pokieee, Will you be my Valentine?</h2>
       <div class="flex gap-4 pt-[20px] items-center" id="responseButtons">
         <button id="yesButton"
           class="bounce2 inline-flex items-center justify-center whitespace-nowrap rounded-md text-[20px] font-medium disabled:pointer-events-none disabled:opacity-50 hover:bg-green-400 min-h-12 min-w-[75px] px-4 py-2 bg-green-500 text-white transition">
@@ -79,7 +79,7 @@
         yesButton.style.height = `${buttonHeight}px`; 
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; 
-        valentineQuestion.textContent = ["Hii my babi, my baby, my mahal, my pokieee, Will you be my Valentine?", "Sigi naa ehheehe", "Pleaseee :<<", "DALII DALII EHEEHE", "Datee tayoooo", "SURE NAA? :<<", "SURE NAA? :<<","BLEEHH BAWAL NA TUMANGGII HIHIHIH"][noClickCount];
+        valentineQuestion.textContent = ["Hii my lovee, my babi, my baby, my mahal, my pokieee, Will you be my Valentine?", "Sigi naa ehheehe", "Pleaseee :<<", "DALII DALII EHEEHE", "Datee tayoooo", "SURE NAA? :<<", "SURE NAA? :<<","BLEEHH BAWAL NA TUMANGGII HIHIHIH"][noClickCount];
         if (noClickCount < 7) {
           noButton.textContent = ["No", "Ayaw", "Balakajan", "BLEH AYAW", "Date ka magisa mo", "AYAW PADIN", "NO NO", "BAWAL MACLICK BLE"][noClickCount];
         }
