--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; 
         valentineQuestion.textContent = ["Hii my lovee, my babi, my baby, my mahal, my pokieee, Will you be my Valentine?", "Sigi naa ehheehe", "Pleaseee :<<", "DALII DALII EHEEHE", "Datee tayoooo", "SURE NAA? :<<", "SURE NAA? :<<","BLEEHH BAWAL NA TUMANGGII HIHIHIH"][noClickCount];
-        if (noClickCount < 7) {
-          noButton.textContent = ["No", "Ayaw", "Balakajan", "BLEH AYAW", "Date ka magisa mo", "AYAW PADIN", "NO NO", "BAWAL MACLICK BLE"][noClickCount];
+        if (noClickCount < 8) {
+          noButton.textContent = ["No", "Ayaw", "Balakajan", "BLEH AYAW", "Date ka magisa mo", "AYAW PADIN", "AYAW AYAW AYAW", "BAWAL MACLICK BLE"][noClickCount];
         }
       }
     });
